refactor: List 응답을 ThemeAllResponse 객체로 감싸서 반환하도록 변경